--- a/PCPartsProfessionals/src/main/webapp/pc_parts_Style.css
+++ b/PCPartsProfessionals/src/main/webapp/pc_parts_Style.css
@@ -67,6 +67,7 @@ input[type=text], input[type=password] {
 	display: inline-block;
 	border: 1px solid #ccc;
 	box-sizing: border-box;
+	box-shadow: 0 0 10px 4px rgba(0,0,0,0.06)
 }
 
 /* Buttons */
